# Smart-Traffic-Management-System-Using-PySpark

./: README.md  ml_test.py  model2.py  requirements.txt  risk_ml.py  test.py  vehical.py  vehical_ml.py
Traffic_Manager/: README.md  pyproject.toml
Traffic_Manager/dashboard/: app.py
Traffic_Manager/src/traffic_analytics/: __init__.py  anomaly.py  cli.py  config.py  forecasting.py  ingest.py  metrics.py  pipeline.py  pricing.py  routing.py  session.py
Traffic_Manager/src/traffic_analytics_pyspark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ml_models/: __init__.py  common.py  input_schema.py  risk_level_model.py  traffic_situation_model.py  traffic_volume_model.py
spark_jobs/: __init__.py  spark_job1.py  spark_job2.py  spark_job3.py  utils.py
static/: style.css
templates/: base.html  error.html  index.html  prediction_result.html  spark_result.html
