[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-analytics-pyspark"
version = "0.1.0"
description = "Distributed traffic analytics, pricing, and routing with PySpark."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "pyspark>=3.5.0",
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "streamlit>=1.34.0",
  "plotly>=5.20.0",
]

[project.scripts]
traffic-analytics = "traffic_analytics.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
